# timetravel_openenv

./: Dockerfile  README.md  client.py  models.py  openenv.yaml  pyproject.toml  train.py  train_colab.ipynb  train_textworld.py
server/: app.py  textworld_client.py  textworld_environment.py  textworld_models.py  timetravel_environment.py
