[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-timetravel"
version = "0.1.0"
description = "Time Travel Rewind environment for OpenEnv - temporal control path puzzle"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
package-dir = {"server" = "server"}
